[package]
name = "libra"
version = "0.1.0"
edition = "2021"

[features]
default = []
p2p = ["gemini"]

[dependencies]
http = "1.3.1"
anyhow = { workspace = true }
byte-unit = "5.1.4"
byteorder = "1.5.0"
bytes = { workspace = true }
ceres = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-backtrace = "0.7.0"
colored = { workspace = true }
common = { workspace = true }
flate2 = { workspace = true } # add features = ["zlib"] if slow
futures = { workspace = true }
futures-util = { workspace = true }
gemini = { workspace = true, optional = true }
hex = { workspace = true }
ignore = "0.4.23"
imara-diff = "0.1.7"
indicatif = "0.17.8"
infer = "0.19.0"
lazy_static = { workspace = true }
lru-mem = "0.3.0"
mercury = { workspace = true }
once_cell = "1.19.0"
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
ring = { workspace = true }
rpassword = "7.3.1"
scopeguard = "1.2.0"
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
similar = "2.6.0"
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.3"
wax = "0.6.0"
[target.'cfg(unix)'.dependencies] # only on Unix
pager = "0.16.0"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "process"] }
tracing-test = "0.2.4"
testcontainers = { version = "0.23.0", features = ["http_wait","reusable-containers"] }
reqwest = { version = "0.11", features = ["blocking"] }
