[package]
name = "libra"
version = "0.1.0"
edition = "2021"

[features]
default = []
p2p = ["gemini"]

[dependencies]
http = { workspace = true }
anyhow = { workspace = true }
byte-unit = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
ceres = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
common = { workspace = true }
engine = { workspace = true }
flate2 = { workspace = true } # add features = ["zlib"] if slow
futures = { workspace = true }
futures-util = { workspace = true }
gemini = { workspace = true, optional = true }
hex = { workspace = true }
imara-diff = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
lazy_static = { workspace = true }
lru-mem = { workspace = true }
mercury = { workspace = true }
once_cell = { workspace = true }
path-absolutize = { workspace = true }
pathdiff = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
ring = { workspace = true }
rpassword = { workspace = true }
scopeguard = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wax = { workspace = true }
url = { workspace = true }
ignore = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[target.'cfg(unix)'.dependencies] # only on Unix
pager = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "process"] }
testcontainers = { workspace = true, features = [
    "http_wait",
    "reusable-containers",
] }
reqwest = { workspace = true, features = ["blocking"] }
