[package]
name = "mda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mda"
path = "src/mod.rs"


[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
image = "0.24.6"
encoding = "0.2"
hound = "3.5.0"
anyhow = "1.0.72"
chrono="0.4.26"
rayon="1"
tokio="1.29.1"
walkdir = "2.3.1"
sha1="0.10.5"
hex="0.4.3"
env_logger = "0.10.0"
csv="1.2.2"
indicatif = "0.17.0"
mp4parse = "0.17.0"
prettytable = "0.10.0"
serde_derive = "1.0"
toml="0.7.6"