[package]
name = "mega"
version = "0.1.0"
edition = "2021"
authors = ["Quanyi Ma <genedna@gmail.com>"]
keywords = ["git", "monorepo", "decentralized"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "mega"
path = "src/main.rs"

[dependencies]
mono = { workspace = true }
jupiter = { workspace = true }
gateway = { workspace = true }
common = { workspace = true }
ceres = { workspace = true }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
smallvec = { workspace = true }
config = { workspace = true }
ctrlc = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
lazy_static = { workspace = true }
assert_cmd = { workspace = true }
scopeguard = { workspace = true }
testcontainers = { version = "0.23.0", features = ["http_wait","reusable-containers"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
http = { workspace = true }