[package]
name = "mega"
version = "0.1.0"
edition = "2021"
authors = ["Quanyi Ma <genedna@gmail.com>"]
keywords = ["git", "monorepo", "decentralized"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "mega"
path = "src/main.rs"

[dependencies]
mono = { workspace = true }
jupiter = { workspace = true }
gateway = { workspace = true }
common = { workspace = true }
context = { workspace = true }

tokio = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rand = { workspace = true }
ctrlc = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
lazy_static = { workspace = true }
assert_cmd = { workspace = true }
testcontainers = { workspace = true, features = ["http_wait","reusable-containers"] }
http = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
axum = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "oauth_test"
path = "tests/oauth_test.rs"
