[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta = { path = "delta" }
common = { workspace = true }
callisto = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] } # enable linking against the libz(C lib); better performance
serde = { workspace = true, features = ["derive"] }
bstr = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"]}
sha1_smol = "1.0.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
dashmap = "5.5.3"
tokio.workspace = true
lru-mem = "0.3.0"
bincode = "1.3.3"
byteorder = "1.5.0"

[target.'cfg(windows)'.dependencies] # only on Windows
mimalloc = "0.1.39" # avoid sticking on dropping on Windows

[dev-dependencies]
tracing-test = "0.2.4"
