[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta = { path = "delta" }
common = { workspace = true }
callisto = { workspace = true }

flate2 = { workspace = true, features = [
    "zlib",
] } # enable linking against the libz(C lib); better performance
serde = { workspace = true, features = ["derive"] }
bstr = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
threadpool = "1.8.1"
num_cpus.workspace = true
dashmap = "6.0.1"
tokio.workspace = true
lru-mem = "0.3.0"
bincode = "1.3.3"
byteorder = "1.5.0"
futures-util = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
memchr = { workspace = true }
encoding_rs = { workspace = true }
rayon = "1.10.0"

[dev-dependencies]
tracing-test = "0.2.4"
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
