[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta = { path = "delta" }
sapling-zstdelta = { path = "zstdelta" }
common = { workspace = true }
callisto = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] } # enable linking against the libz(C lib); better performance
serde = { workspace = true, features = ["derive"] }
bstr = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha1 = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
threadpool = { workspace = true }
num_cpus = { workspace = true }
dashmap = { workspace = true }
tokio = {workspace = true }
lru-mem = { workspace = true }
bincode = { workspace = true , features = ["serde"] }
byteorder = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
memchr = { workspace = true }
encoding_rs = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
