[package]
name = "mono"
version = "0.1.0"
edition = "2021"
authors = ["Quanyi Ma <genedna@gmail.com>"]
keywords = ["git", "monorepo", "decentralized"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "mono"
path = "src/lib.rs"

[[bin]]
name = "mono"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
callisto = { workspace = true }
jupiter = { workspace = true }
ceres = { workspace = true }
vault = { workspace = true }
saturn = { workspace = true }
context = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
russh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
axum-extra = { workspace = true, features = ["typed-header"] }
tokio = { workspace = true, features = ["net", "macros"] }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
lazy_static = { workspace = true }
ctrlc = { workspace = true }
oauth2 = { workspace = true }
tower-sessions = { workspace = true, features = ["memory-store"] }
async-trait = { workspace = true }
time = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true, features = ["macros"] }

http = { workspace = true }
cedar-policy = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4"] }
neptune = { workspace = true }
sha2 = "0.10"
hex = "0.4"



[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
