[package]
name = "mono"
version = "0.1.0"
edition = "2024"
authors = ["Quanyi Ma <genedna@gmail.com>"]
keywords = ["git", "monorepo", "decentralized"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "mono"
path = "src/lib.rs"

[[bin]]
name = "mono"
path = "src/main.rs"

[dependencies]
api-model = { workspace = true }
bellatrix = { workspace = true }
common = { workspace = true }
callisto = { workspace = true }
jupiter = { workspace = true }
ceres = { workspace = true }
vault = { workspace = true }
saturn = { workspace = true }
context = { workspace = true }
git-internal = { workspace = true }
anyhow = { workspace = true }
percent-encoding = "2.3"
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
russh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
axum-extra = { workspace = true, features = ["typed-header"] }
tokio = { workspace = true, features = ["net", "macros", "signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
# TODO: temporary using 0.12.28, wait for oauth2 to be compatible
reqwest = { version = "0.12.28", features = [
    "rustls-tls-webpki-roots",
    "json",
    "stream",
    "blocking",
] }
regex = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
ctrlc = { workspace = true }
oauth2 = { workspace = true }
tower-sessions = { workspace = true, features = ["memory-store"] }
async-trait = { workspace = true }
time = { workspace = true, features = ["serde"] }
http = { workspace = true }
cedar-policy = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
once_cell = { workspace = true }
sea-orm = { workspace = true }


[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
qlean = {workspace = true}
