[package]
name = "mono"
version = "0.1.0"
authors = ["Quanyi Ma <genedna@gmail.com>"]
keywords = ["git", "monorepo", "decentralized"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition.workspace = true

[lib]
name = "mono"
path = "src/lib.rs"

[[bin]]
name = "mono"
path = "src/main.rs"

[dependencies]
api-model = { workspace = true }
bellatrix = { workspace = true }
common = { workspace = true }
callisto = { workspace = true }
jupiter = { workspace = true }
lettre = { workspace = true }
ceres = { workspace = true }
vault = { workspace = true }
saturn = { workspace = true }
context = { workspace = true }
git-internal = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
percent-encoding = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
russh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = [
    "cors",
    "trace",
    "decompression-full",
] }
axum-extra = { workspace = true, features = ["typed-header"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "blocking"] }
regex = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
ctrlc = { workspace = true }
tower-sessions = { workspace = true, features = ["memory-store"] }
time = { workspace = true, features = ["serde"] }
http = { workspace = true }
cedar-policy = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
once_cell = { workspace = true }


[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[dev-dependencies]
qlean = { workspace = true }
tempfile = { workspace = true }
