[package]
name = "monobean"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Neon<neonkk@qq.com>"]
build = "build.rs"

[workspace]

[[bin]]
name = "monobean"
path = "src/main.rs"

[dependencies]
gtk = { version = "~0.9", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
scv = { version = "0.9.0", package = "sourceview5", features = ["gtk_v4_12", "v5_10"]}

# To run mega core, we have to add these:
mono = { path = "../mono" }
common = { path = "../common" }
jupiter = { path = "../jupiter" }
taurus = { path = "../taurus" }
vault = { path = "../vault" }
tokio = "1.43.0"
russh = "0.51.1"
axum = "0.8.1"
axum-server = "0.7.1"
bytes = "1.10.0"

async-channel = "2.3.1"
thiserror = { version = "2.0.11", features = ["default"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["default", "env-filter"] }
rustls = "0.23.23"
gix-config = "0.43.0"
home = "0.5.11"
smallvec = "1.14.0"

[build-dependencies]
glib-build-tools = "0.20.0"

[profile.dev]
panic = "abort" # glib panics are not human friendly, just leave them alone

[profile.release]
lto = "fat"
