[package]
name = "monobean"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Neon<neonkk@qq.com>"]
build = "build.rs"

[workspace]

[[bin]]
name = "monobean"
path = "src/main.rs"

[dependencies]
gtk = { version = "~0.9", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
scv = { version = "0.9.0", package = "sourceview5", features = ["gtk_v4_12", "v5_10"]}

# To run mega core, we have to add these:
mono = { path = "../mono" }
common = { path = "../common" }
jupiter = { path = "../jupiter" }
vault = { path = "../vault" }
gateway = { path = "../gateway" }
tokio = "1.43.0"
russh = "0.51.1"
axum = "0.8.1"
axum-server = "0.7.1"
bytes = "1.10.0"

async-channel = "2.3.1"
thiserror = { version = "2.0.11", features = ["default"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["default", "env-filter"] }
rustls = "0.23.23"
gix-config = "0.43.0"
home = "0.5.11"
smallvec = "1.14.0"
directories = "6.0.0"
tracing-appender = "0.2.3"

[build-dependencies]
glib-build-tools = "0.20.0"

[dev-dependencies]
tempfile = "3.19.1"

[profile.dev]
panic = "abort" # glib panics are not human friendly, just leave them alone

# Configurations for CI release using cargo-packager
[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Monobean"
identifier = "org.Web3Infrastructure.Monobean"
resources = [
  "Cargo.toml",
  "../../README.md",
  "icons/*",
  "src",
  { src = "src-ui/assets/tauri.svg", target = "path/to/tauri.svg" },
  { src = "src-ui", target = "path/to/src-ui" },
  { src = "src-ui/assets/*", target = "public" },
]
icons = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico",
]
