[package]
name = "mq"
version = "0.1.0"
edition = "2021"

[lib]
name = "mq"
path = "src/lib.rs"

[dependencies]
common = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5.10"
