[package]
name = "neptune"
version = "0.1.0"
edition = "2024"

[dependencies]
infer = { workspace = true }
git-internal = { workspace = true }
path-absolutize = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
diffs = { workspace = true }