[package]
name = "observatory"
version = "0.1.0"
edition = "2024"

[lib]
name = "observatory"
path = "src/lib.rs"


[dependencies]
common = { workspace = true }

rdkafka = { workspace = true, features = ["cmake-build"] }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true }

[dev-dependencies]
