[workspace]

[package]
name = "orion-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
qlean = { version = "0.3.0" }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
anyhow = "1.0.102"
