[package]
name = "orion-scheduler"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "orion-scheduler"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "signal", "process"] }
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util = { workspace = true }
async-stream = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
qlean = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
